--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: LI Shasha
 ---
 <div class="home">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108085250-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
