--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: LI Shasha
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-108085250-1');
+  gtag('config', 'G-J57QMWVXMZ');
 </script>
 
 <img src="profile_picture.jpg" alt="LI Shasha pic" style="width:240px;height:240px;" title="LI Shasha"; algin="middle">
