--- a/research.html
+++ b/research.html
@@ -3,9 +3,12 @@ layout: page
 title: Research
 permalink: /research/
 ---
+<p><big>Working Papers</big></p>
+
 <strong><a href="https://shasha-li.github.io/content/P2P.pdf">Lighthouse in the Dark: Information in Private Lending</a></strong> <br><br>
 <p style="text-align:justify"><i>Abstract: </i>This paper examines the impact of the introduction of reference information on Peer-to-Peer (P2P) lending contracts and outcomes. From 2012, the Chinese government gradually built private lending registration service centres (Pcentres) in different cities. These centres primarily work as public information centres. I apply Difference-In-Difference (DID) analysis based on the online P2P lending data from Renrendai. To address the endogeneity, I use the timing of local private lending problems in the Chinese-style political cycle to instrument the decision to introduce Pcentres. Results show that the introduction of Pcentres pushes up the P2P loan trading volume and the success rate of applications. Remarkably, Pcentres reduce the dispersion of contract terms and this effect is mainly driven by the less educated. Moreover, it shows Pcentres improve the loan repayment performance. This study reports novel evidence that the government can provide information as public goods to guide the informal financial market.</p>
 <br>
+
 <strong>The cost of default in a cash-in-advance economy</strong><br>with Kwangwon Ahn, and Daeyong Lee;<br><br>
 <p style="text-align:justify"><i>Abstract: </i>The 2008 global financial crisis and its aftermath caused the high default rate and
 thus many national central banks ran expansionary monetary policy. Under a Cash-
@@ -14,3 +17,7 @@ injection of cash affects welfare cost of default. Incorporating non-linear form
 default penalty into a CIA model, we find that default causes around 1% loss
 in consumption. The negative effects of default on welfare is significantly greater in an
 economy with higher money growth rate only in the long-run but not in the short-run.</p><br>
+
+<p><big>Work in progress</big></p>
+<strong>Attention and fundings</strong>
+<strong>Investor protection and debt structure</strong>
