--- a/teachings.html
+++ b/teachings.html
@@ -6,7 +6,7 @@ permalink: /teachings/
 
 <strong><a>TA/Tutor</a></strong> <br><br>
 <p style="text-align:justify"><i>PhD course: </i> Corporate Finance (Finance 4);</p>
-<p style="text-align:justify"><i>Master course: </i> ; Finance for Green Business and the Circular
+<p style="text-align:justify"><i>Master course: </i> Finance for Green Business and the Circular
 Economy, Econometrics;</p>
 <p style="text-align:justify"><i>Undergraduate: </i> Principles of Finance, International Banking, Venture and Development Capital,
 Macroeconomics.</p>
