--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ title: LI Shasha
   gtag('config', 'G-J57QMWVXMZ');
 </script>
 
-<img src="profile_picture.jpg" alt="LI Shasha pic" style="width:240px;height:240px;" title="LI Shasha"; algin="middle">
+<img src="profile_picture.jpg" alt="LI Shasha pic" style="width:240px;height:240px;" title="LI SHASHA | 厉莎莎"; algin="middle">
 <br>
-Hi, I am LI Shasha （厉莎莎）! People also call me Lisa. I am a 5th-year PhD student in Economics and Finance at Bocconi University.  
+Hi, I am Shasha! People also call me Lisa. I am a 5th-year PhD student in Economics and Finance at Bocconi University.  
 
 <br><br>
 My research interests lie in Corporate Finance, Credit Market and Financial Economics. 
