--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: LI Shasha
 
 <img src="profile_picture.jpg" alt="LI Shasha pic" style="width:240px;height:240px;" title="LI SHASHA | 厉莎莎"; algin="middle">
 <br>
-Hi, I am Shasha! People also call me Lisa. I am a 5th-year PhD student in Economics and Finance at Bocconi University.  
+Hi, my name is Shasha! People also call me Lisa. I am a 5th-year PhD student in Economics and Finance at Bocconi University.  
 
 <br><br>
 My research interests lie in Corporate Finance, Credit Market and Financial Economics. 
