--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: LI Shasha
+title: LI SHASHA | 厉莎莎
 ---
 <div class="home">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
@@ -12,7 +12,7 @@ title: LI Shasha
   gtag('config', 'G-J57QMWVXMZ');
 </script>
 
-<img src="profile_picture.jpg" alt="LI Shasha pic" style="width:240px;height:240px;" title="LI SHASHA | 厉莎莎"; algin="middle">
+<img src="profile_picture.jpg" alt="LI Shasha pic" style="width:240px;height:240px;" title="LI Shasha"; algin="middle">
 <br>
 Hi, my name is Shasha! People also call me Lisa. I am a 5th-year PhD student in Economics and Finance at Bocconi University.  
 
