--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@ permalink: /research/
 <p style="text-align:justify"><i>Abstract: </i>This paper examines the impact of the introduction of reference information on Peer-to-Peer (P2P) lending contracts and outcomes. From 2012, the Chinese government gradually built private lending registration service centres (Pcentres) in different cities. These centres primarily work as public information centres. I apply Difference-In-Difference (DID) analysis based on the online P2P lending data from Renrendai. To address the endogeneity, I use the timing of local private lending problems in the Chinese-style political cycle to instrument the decision to introduce Pcentres. Results show that the introduction of Pcentres pushes up the P2P loan trading volume and the success rate of applications. Remarkably, Pcentres reduce the dispersion of contract terms and this effect is mainly driven by the less educated. Moreover, it shows Pcentres improve the loan repayment performance. This study reports novel evidence that the government can provide information as public goods to guide the informal financial market.</p>
 <br>
 
-<strong>The cost of default in a cash-in-advance economy</strong><br>with Kwangwon Ahn, and Daeyong Lee;<br><br>
+<strong>The Cost of Default in a Cash-In-Advance Economy</strong><br>with Kwangwon Ahn, and Daeyong Lee;<br><br>
 <p style="text-align:justify"><i>Abstract: </i>The 2008 global financial crisis and its aftermath caused the high default rate and
 thus many national central banks ran expansionary monetary policy. Under a Cash-
 In-Advance (CIA) framework, we examine the welfare cost of default and how the
