--- a/research.html
+++ b/research.html
@@ -5,7 +5,7 @@ permalink: /research/
 ---
 <p><big>Working Papers</big></p>
 <strong>Lighthouse in the Dark: Information in Private Lending </strong>  <br>
-<em>Conferences:</em><em>"LBS PhD Seminar; ESWM 2019; RES 2020 (Scheduled)"</em>
+<em><small>Conferences: LBS PhD Seminar; ESWM 2019; RES 2020 (scheduled)</small></em>
 <p style="text-align:justify"><b><i>Abstract: </i></b>This paper examines the impact of the introduction of reference information on Peer-to-Peer (P2P) lending contracts and outcomes. From 2012, the Chinese government gradually built private lending registration service centres (Pcentres) in different cities. These centres primarily work as public information centres. I apply Difference-In-Difference (DID) analysis based on the online P2P lending data from Renrendai. To address the endogeneity, I use the timing of local private lending problems in the Chinese-style political cycle to instrument the decision to introduce Pcentres. Results show that the introduction of Pcentres pushes up the P2P loan trading volume and the success rate of applications. Remarkably, Pcentres reduce the dispersion of contract terms and this effect is mainly driven by the less educated. Moreover, it shows Pcentres improve the loan repayment performance. This study reports novel evidence that the government can provide information as public goods to guide the informal financial market.</p>
 <br>
 
