--- a/teachings.html
+++ b/teachings.html
@@ -4,10 +4,16 @@ title: Teaching
 permalink: /teachings/
 ---
 
-<strong><a>TA/Tutor</a></strong> <br><br>
+<strong><a>Bocconi University (TA/Tutor)</a></strong> <br><br>
 <p style="text-align:justify"><i>PhD: </i> Corporate Finance (Finance 4);</p>
 <p style="text-align:justify"><i>Master: </i> Finance for Green Business and the Circular
 Economy, Econometrics;</p>
 <p style="text-align:justify"><i>Undergraduate: </i> Principles of Finance, International Banking, Venture and Development Capital,
 Macroeconomics.</p>
+<br>
+
+<strong><a>Peking University (TA)</a></strong> <br><br>
+<p style="text-align:justify"><i>Master: </i>Numerical Methods and Analysis, Applied Stochastic Processes
+.</p>
+
 <br>
