--- a/teachings.html
+++ b/teachings.html
@@ -13,7 +13,6 @@ Macroeconomics.</p>
 <br>
 
 <strong><a>Peking University (TA)</a></strong> <br><br>
-<p style="text-align:justify"><i>Master: </i>Numerical Methods and Analysis, Applied Stochastic Processes
-.</p>
+<p style="text-align:justify"><i>Master: </i>Numerical Methods and Analysis, Applied Stochastic Processes.</p>
 
 <br>
