--- a/research.html
+++ b/research.html
@@ -4,7 +4,7 @@ title: Research
 permalink: /research/
 ---
 
-<strong><a>Working Papers</a></strong> <br>
+<strong><big><a>Working Papers</a></big></strong> <br><br>
 
 <strong>Lighthouse in the Dark: Information in Private Lending </strong>  <br>
 <em><small>Presentation: LBS PhD Seminar; ESWM 2019; RES 2020 (scheduled)</small></em>
