--- a/teachings.html
+++ b/teachings.html
@@ -9,7 +9,7 @@ permalink: /teachings/
 <p style="text-align:justify"><i>Master: </i> Finance for Green Business and the Circular
 Economy, Econometrics;</p>
 <p style="text-align:justify"><i>Undergraduate: </i> Principles of Finance, International Banking, Venture and Development Capital,
-Macroeconomics.</p>
+Macroeconomics, International and Monetary Economics.</p>
 <br>
 
 <strong><a>Peking University (TA)</a></strong> <br><br>
