--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@ title: LI SHASHA | 厉莎莎
 Hi, my name is Shasha! People also call me Lisa. I am a 5th-year PhD student in Economics and Finance at Bocconi University.  
 
 <br><br>
-My research interests lie in Corporate Finance, Credit Market and Financial Economics. 
+My research interests lie in Corporate Finance, Fintech, Credit Market and Financial Economics. 
 </div>
