--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: LI SHASHA | 厉莎莎
+title: LI SHASHA
 ---
 <div class="home">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
