--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: SHASHA LI
 
 <img src="profile_picture.jpg" alt="LI Shasha pic" style="width:240px;height:240px;" title="LI Shasha"; algin="middle">
 <br>
-Hi, my name is Shasha! People also call me Lisa. I am a 5th-year PhD student in Economics and Finance at Bocconi University.  
+Hi, my name is Shasha! People also call me Lisa. I am a PhD candidate in Economics and Finance at Bocconi University.  
 
 <br><br>
 My research interests lie in Corporate Finance, Fintech, Credit Market and Financial Economics. 
