--- a/research.html
+++ b/research.html
@@ -6,12 +6,13 @@ permalink: /research/
 
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
-<strong>Lighthouse in the Dark: Information in Private Lending (JMP) </strong>  <br>
+<strong>Lighthouse in the Dark: Information in Private Lending <em>(JMP)</em> </strong>  <br>
 <em><small>Presentation: LBS PhD Seminar; ESWM 2019; Bocconi La Strada Seminar; RES 2020 (cancelled) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i></b>This paper examines the impact of the introduction of reference information on Peer-to-Peer (P2P) lending contracts and outcomes. From 2012, the Chinese government gradually built private lending registration service centres (Pcentres) in different cities. These centres primarily work as public information centres. I apply Difference-In-Difference (DID) analysis based on the online P2P lending data from Renrendai. To address the endogeneity, I use the timing of local private lending problems in the Chinese-style political cycle to instrument the decision to introduce Pcentres. Results show that the introduction of Pcentres pushes up the P2P loan trading volume and the success rate of applications. Remarkably, Pcentres reduce the dispersion of contract terms and this effect is mainly driven by the less educated. Moreover, it shows Pcentres improve the loan repayment performance. This study reports novel evidence that the government can provide information as public goods to guide the informal financial market.</p>
 <br>
 
-<strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong><br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a>;<br>
+<strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
+<br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a>;<br>
 <p style="text-align:justify"><b><i>Abstract: </i></b>The 2008 global financial crisis and its aftermath caused the high default rate and
 thus many national central banks ran expansionary monetary policy. Under a Cash-
 In-Advance (CIA) framework, we examine the welfare cost of default and how the
@@ -21,3 +22,4 @@ in consumption. The negative effects of default on welfare is significantly grea
 economy with higher money growth rate only in the long-run but not in the short-run.</p><br>
 <br>
 <br><br><br>
+
