--- a/research.html
+++ b/research.html
@@ -13,8 +13,7 @@ permalink: /research/
 
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
 <br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a>;<br>
-<p style="text-align:justify"><b><i>Abstract: </i></b>The 2008 global financial crisis and its aftermath caused the high default rate and
-thus many national central banks ran expansionary monetary policy. Under a Cash-
+<p style="text-align:justify"><b><i>Abstract: </i></b>This study shows that corporate default is not trivial to the real economy. Under a Cash-
 In-Advance (CIA) framework, we examine the welfare cost of default and how the
 injection of cash affects welfare cost of default. Incorporating non-linear form of nonpecuniary
 default penalty into a CIA model, we find that default causes around 1% loss
