--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@ title: SHASHA LI
   gtag('config', 'G-J57QMWVXMZ');
 </script>
 
-<div class="row">
-  <div class="column">
-<img src="profile_picture.jpg" alt="LI Shasha pic" style="width:270px;height:270px;" title="LI Shasha"; algin="middle">
   
-  </div>
-  <div class="column">
-  <br>
+  
+  <div class="container">
+    <div class="col-lg-6 col-md-6 >
+     <img src="profile_picture.jpg" alt="LI Shasha pic" style="width:270px;height:270px;" title="LI Shasha"; algin="middle">
+    </div>
+    <div class="col-lg-6 col-md-6 >
+        <br>
 Hi, my name is Shasha! People also call me Lisa. I am a PhD candidate in Economics and Finance at Bocconi University.  
 <br><br>
 My research interests lie in Corporate Finance, Fintech, Credit Market and Financial Economics. 
-  </div>
-</div>  
-  
+    </div
+<div>
   
 </div>
