--- a/research.html
+++ b/research.html
@@ -6,11 +6,18 @@ permalink: /research/
 
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
-<strong>Lighthouse in the Dark: Information in Private Lending <em>(JMP, draft soon) <a href="https://shasha-li.github.io/content/JMP-LI.pdf">slides</a></em> </strong>  <br>
+<strong><a href="https://shasha-li.github.io/content/JMP-LI.pdf">Lighthouse in the Dark: Information in Private Lending </a></strong>  <br>
 <em><small>Presentation: LBS PhD Seminar; ESWM 2019; Bocconi La Strada Seminar; RES 2020 (cancelled) </small></em>
-<p style="text-align:justify"><b><i>Abstract: </i></b>This paper examines the impact of the introduction of reference information on marketplace lending contracts and outcomes. From 2012, the Chinese government gradually built private lending registration service centres (Pcentres) in different cities. These centres primarily work as public information centres. I apply Difference-In-Difference (DID) analysis based on the online P2P lending data from Renrendai. To address the endogeneity, I use the timing of local private lending problems in the Chinese-style political cycle to instrument the decision to introduce Pcentres. Results show that the introduction of Pcentres pushes up the P2P loan trading volume and the success rate of applications. Remarkably, Pcentres reduce the dispersion of contract terms and this effect is mainly driven by the less educated. Moreover, it shows Pcentres improve the loan repayment performance. This study reports novel evidence that the government can provide information as public goods to guide the informal financial market.</p>
-<br>
-
+<p style="text-align:justify"><b><i>Abstract: </i>
+  </b>This paper sheds light on the search friction in the Fintech credit market, and examines the impact of public information service centers on marketplace lending outcomes. 
+  From 2012, Chinese government gradually introduced private lending registration service centers (PLcentres), essentially public information service centers, in many cities. 
+  Exploiting the introduction of PLcentres as a natural experiment, I apply a staggered Difference-In-Differences (DID) analysis using a novel data set from a leading 
+  marketplace lending platform. To address the potential endogeneity, I use a measure of China's political cycle as instrumental variable. PLcentres boost the marketplace 
+  lending. Remarkably, PLcentres help borrowers secure lower interest rates from the platform and reduce the dispersion of interest rates. The effect is mainly driven by 
+  less sophisticated borrowers. The findings imply that PLcentres reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
+  </p><br>
+  <br>
+  
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
 <br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a>;<br>
 <p style="text-align:justify"><b><i>Abstract: </i></b>This study shows that corporate default is not trivial to the real economy. Under a Cash-
