--- a/research.html
+++ b/research.html
@@ -6,8 +6,8 @@ permalink: /research/
 
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
-<strong><a href="https://shasha-li.github.io/content/JMP-LI.pdf">Lighthouse in the Dark: Information in Private Lending </a></strong>  <br>
-<em><small>Presentation: LBS PhD Seminar; ESWM 2019; Bocconi La Strada Seminar; RES 2020 (cancelled) </small></em>
+<strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Information in Private Lending</a></strong> (JMP)<br>
+<em><small>Presentation: Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>This paper sheds light on the search friction in the Fintech credit market, and examines the impact of public information service centers on marketplace lending outcomes. 
   From 2012, Chinese government gradually introduced private lending registration service centers (PLcentres), essentially public information service centers, in many cities. 
