--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@ permalink: /research/
 
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
-<strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Information in Private Lending</a></strong> (JMP)<br>
+<strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> (JMP)<br>
 <em><small>Presentation: Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>This paper sheds light on the search friction in the Fintech credit market, and examines the impact of public information service centers on marketplace lending outcomes. 
