--- a/research.html
+++ b/research.html
@@ -9,12 +9,13 @@ permalink: /research/
 <strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> (JMP)<br>
 <em><small>Presentation: Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
-  </b>This paper sheds light on the search friction in the Fintech credit market, and examines the impact of public information service centers on marketplace lending outcomes. 
-  From 2012, Chinese government gradually introduced private lending registration service centers (PLcentres), essentially public information service centers, in many cities. 
-  Exploiting the introduction of PLcentres as a natural experiment, I apply a staggered Difference-In-Differences (DID) analysis using a novel data set from a leading 
-  marketplace lending platform. To address the potential endogeneity, I use a measure of China's political cycle as instrumental variable. PLcentres boost the marketplace 
-  lending. Remarkably, PLcentres help borrowers secure lower interest rates from the platform and reduce the dispersion of interest rates. The effect is mainly driven by 
-  less sophisticated borrowers. The findings imply that PLcentres reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
+  </b>This paper sheds light on the search friction in the Fintech credit market and examines the impact of public information service centres on marketplace 
+  lending outcomes. From 2012, the Chinese government gradually introduced private lending registration service centres (PLcentres), virtually public information 
+  service centres, in many cities. Taken it as a natural experiment, I apply a staggered Difference-In-Differences (DID) analysis using a novel data set from 
+  a leading marketplace lending platform. To address the potential endogeneity, I use a measure of China's political cycle to instrument the introduction of 
+  PLcentres. PLcentres effectively boost the marketplace lending. Remarkably, PLcentres help borrowers secure lower interest rates from the 
+  platform and reduce the dispersion of interest rates. Less sophisticated borrowers mainly drive the effect. 
+  The findings imply that PLcentres reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
   </p><br>
   <br>
   
