--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@ title: SHASHA LI
 
         <br>
 Hi, my name is Shasha! People also call me Lisa. I am a PhD candidate in Economics and Finance at Bocconi University.  
-<br><br>
+<br>
+  I am on the 2020/2021 job market and will be available for interviews at the EEA, CICE and ASSA meetings.
+  <br>
 My research interests lie in Corporate Finance, Fintech, Credit Market and Financial Economics. 
 
-  
+<br> 
+My Job Market Paper studies the search frictions in marketplace lending and the impact of informational public goods on Fintech credit borrowers (draft <a href="https://shasha-li.github.io/content/JMP-Li.pdf">here</a>).
 </div>
