--- a/research.html
+++ b/research.html
@@ -18,7 +18,6 @@ permalink: /research/
   The findings imply that PLcentres reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
   </p><br>
 
-  
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
 <br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a>;<br>
 <p style="text-align:justify"><b><i>Abstract: </i></b>This study shows that corporate default is not trivial to the real economy. Under a Cash-
@@ -28,5 +27,18 @@ default penalty into a CIA model, we find that default causes around 1% loss
 in consumption. The negative effects of default on welfare is significantly greater in an
 economy with higher money growth rate only in the long-run but not in the short-run.</p><br>
 <br>
+
+<strong><big><a>Work-In-Progress</a></big></strong> <br><br>
+<strong><a>Green Attention, Capital Structure and Market Integration.</a></strong>
+<br>with <a href="https://sites.google.com/view/biaoyang">Biao Yang</a>;<br>
+<p style="text-align:justify"><b><i>Abstract: </i></b>This paper investigates how investor attention 
+  affects the credit and equity market integration by looking at the endogenous role of firms. 
+  We find that when there is greater attention on topics related to climate change, the firms with 
+  high ENSCORE, the green firms, have greater integration between credit and equity markets. 
+  When investors have close attention on green topics, they tend to trade more in green firms' 
+  stocks and bonds and bring liquidity to both markets. Moreover, green firms endogenously adjust their financing decisions.</p><br>
+<br>
+
+
 <br><br><br>
 
