--- a/research.html
+++ b/research.html
@@ -4,7 +4,7 @@ title: Research
 permalink: /research/
 ---
 
-<strong><big><a>Working Papers</a></big></strong> <br><br>
+<strong><big><a>Working Papers</a></big></strong> <br>
 
 <strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> (JMP)<br>
 <em><small>Presentation: Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
@@ -27,8 +27,8 @@ default penalty into a CIA model, we find that default causes around 1% loss
 in consumption. The negative effects of default on welfare is significantly greater in an
 economy with higher money growth rate only in the long-run but not in the short-run.</p><br>
 <br>
-
-<strong><big><a>Work-In-Progress</a></big></strong> <br><br>
+<br>
+<strong><big><a>Work-In-Progress</a></big></strong> <br>
 <strong><a>Green Attention, Capital Structure and Market Integration.</a></strong>
 <br>with <a href="https://sites.google.com/view/biaoyang">Biao Yang</a>;<br>
 <p style="text-align:justify"><b><i>Abstract: </i></b>This paper investigates how investor attention 
