--- a/research.html
+++ b/research.html
@@ -7,15 +7,15 @@ permalink: /research/
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
 <strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> (JMP)<br>
-<em><small>Presentation: Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
+<em><small>Presentation: 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
-  </b>This paper sheds light on the search friction in the Fintech credit market and examines the impact of public information service centres on marketplace 
-  lending outcomes. From 2012, the Chinese government gradually introduced private lending registration service centres (PLcentres), virtually public information 
-  service centres, in many cities. Taken it as a natural experiment, I apply a staggered Difference-In-Differences (DID) analysis using a novel data set from 
-  a leading marketplace lending platform. To address the potential endogeneity, I use a measure of China's political cycle to instrument the introduction of 
-  PLcentres. PLcentres effectively boost the marketplace lending. Remarkably, PLcentres help borrowers secure lower interest rates from the 
-  platform and reduce the dispersion of interest rates. Less sophisticated borrowers mainly drive the effect. 
-  The findings imply that PLcentres reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
+  </b>This paper sheds light on the search friction in the Fintech credit market and examines the impact of public information service on marketplace 
+  lending outcomes. From 2012, the Chinese government gradually introduced private-lending registration service centers (PLcenters) in many cities to 
+  disseminate information and financial knowledge. Exploiting the introduction of PLcenters as a natural experiment, I apply a staggered 
+  difference-in-differences (DID) analysis using a novel data set from  a leading marketplace lending platform. To address the endogeneity, 
+  I use a measure of China's political cycle as instrumental variable. I find PLcenters effectively boost the marketplace lending. Remarkably,
+  PLcenters help borrowers secure lower interest rates from the platform and reduce the dispersion of interest rates. Less sophisticated borrowers
+  mainly drive the effects. The findings imply PLcenters reduce search costs, pointing to a potentially important role of informational public goods in Fintech credit.
   </p><br>
 
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
