--- a/index.html
+++ b/index.html
@@ -26,5 +26,7 @@ My research interests lie in Corporate Finance, Fintech, Credit Market and Finan
 <br>   <br>
 My Job Market Paper studies the search frictions in marketplace lending and the impact of informational public goods on Fintech credit borrowers (draft <a href="https://shasha-li.github.io/content/JMP-Li.pdf">here</a>).
   <br>
+  
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/vn4cvv5Y6No" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <br>
 </div>
