--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: SHASHA LI
 
   
 
-     <img src="profile_picture.jpg" alt="LI Shasha pic" style="width:270px;height:270px;" title="LI Shasha"; algin="middle">
+     <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:400px;height:600px;" title="LI Shasha"; algin="middle">
 
         <br>
 Hi, my name is Shasha! People also call me Lisa. I am a PhD candidate in Economics and Finance at Bocconi University.  
