--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@ Hi, my name is Shasha! People also call me Lisa. I am a PhD candidate in Economi
 <br>  <br>
   I am on the 2020/2021 job market and will be available for interviews.
   <br>  <br>
-My research interests lie in Corporate Finance, Fintech, Credit Market and Financial Economics. 
+My research interests lie in Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
 
 <br>   <br>
 My Job Market Paper studies the search frictions in marketplace lending and the impact of informational public goods on Fintech credit borrowers (draft <a href="https://shasha-li.github.io/content/JMP-Li.pdf">here</a>).
   <br>  <br>
   <p align="center"><iframe width="400" height="225" src="https://www.youtube.com/embed/vn4cvv5Y6No" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
   
-  <br>
+  <br>  <br>
+  My <a href="https://shasha-li.github.io/content/SHASHA%20LI%20CV.pdf" target="_blank">CV</a>.
+    <br>  <br>
 </div>
