--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Hi, my name is Shasha! People also call me Lisa. I am a PhD candidate in Economi
 My research interests lie in Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
 
 <br>   <br>
-My Job Market Paper studies the search frictions in marketplace lending and the impact of informational public goods on Fintech credit borrowers (draft <a href="https://shasha-li.github.io/content/JMP-Li.pdf">here</a>).
+In my Job Market Paper, I shed light on search frictions in marketplace lending and the impact of informational public goods on Fintech credit borrowers (draft <a href="https://shasha-li.github.io/content/JMP-Li.pdf">here</a>).
   <br>  <br>
   <p align="center"><iframe width="400" height="225" src="https://www.youtube.com/embed/vn4cvv5Y6No" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
   
