--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: SHASHA LI
      <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:320px;" title="LI Shasha"; algin="middle">
 
         <br>
-Hi, my name is Shasha! People also call me Lisa. I am a PhD candidate in Economics and Finance at Bocconi University.  
+Hi, my name is Shasha! People also call me Lisa. I am a PhD in Economics and Finance at Bocconi University.  
 <br>  <br>
   I am on the 2020/2021 job market and will be available for interviews.
   <br>  <br>
