--- a/index.html
+++ b/index.html
@@ -17,16 +17,11 @@ title: SHASHA LI
      <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:320px;" title="LI Shasha"; algin="middle">
 
         <br>
-Hi, my name is Shasha! People also call me Lisa. I am a PhD in Economics and Finance at Bocconi University.  
-<br>  <br>
-  I am on the 2020/2021 job market and will be available for interviews.
-  <br>  <br>
+Hi, I am Shasha Li! People also call me Lisa. I obtained a Ph.D. degree in Economics and Finance from Bocconi University in Jan 2021.
+
+<br>   <br>
 My research interests lie in Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
 
 <br>   <br>
-In my Job Market Paper, I shed light on search frictions in marketplace lending and the impact of informational public goods on Fintech credit borrowers (draft <a href="https://shasha-li.github.io/content/JMP-Li.pdf">here</a>).
-  <br>  <br>
-  <p align="center"><iframe width="400" height="225" src="https://www.youtube.com/embed/vn4cvv5Y6No" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-  
-  <br>  <br>
+I will join Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg as a W1 Assistant Professor in Summer 2021.
 </div>
