--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@ title: SHASHA LI
 </script>
 
   
-
+<div class="row">
+  <div class="column">
      <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:320px;" title="LI Shasha"; algin="middle">
+  </div>
+  <div class="column">
+    W1 Junior Professor
+     <br>
+    Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg
+  </div>
+</div>
+     
 
         <br>
 Hi, I am Shasha Li! People also call me Lisa. I obtained a Ph.D. degree in Economics and Finance from Bocconi University in Jan 2021.
@@ -22,6 +31,5 @@ Hi, I am Shasha Li! People also call me Lisa. I obtained a Ph.D. degree in Econo
 <br>   <br>
 My research interests lie in Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
 
-<br>   <br>
-I will join Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg as a W1 Assistant Professor in Summer 2021.
+<br>   <br> 
 </div>
