--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: SHASHA LI
+title: WELCOME!
 ---
 <div class="home">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
@@ -17,9 +17,9 @@ title: SHASHA LI
   <div class="column">
      <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:320px;" title="LI Shasha"; algin="middle">
   </div>
-  <div class="column">
+  <div class="column"><br><br><br><br>
     W1 Junior Professor
-     <br>
+     <br><br><br>
     Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg
   </div>
 </div>
