--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: WELCOME!
+title:  
 ---
 <div class="home">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
@@ -18,8 +18,8 @@ title: WELCOME!
      <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:320px;" title="LI Shasha"; algin="middle">
   </div>
   <div class="column"><br><br><br><br>
-    W1 Junior Professor
-     <br><br><br>
+   <strong><big> Shasha Li </big></strong> 
+     <br><br>W1 Junior Professor<br><br>
     Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg
   </div>
 </div>
@@ -33,3 +33,5 @@ My research interests lie in Corporate Finance, Fintech and Credit Market, in ge
 
 <br>   <br> 
 </div>
+
+
