--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@ title:
   <div class="column">
      <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:320px;" title="LI Shasha"; algin="middle">
   </div>
-  <div class="column"><br><br> 
-   <strong><font size="+2">Shasha Li</font> </strong> 
+  <div class="column"><br>
+   <strong><font size="+2">Shasha Li</font> </strong> <br> 
+    <strong><font size="+2">厉莎莎</font> </strong>
      <br><br>W1 Junior Professor<br><br>
     Halle Institute for Economic Research (IWH) <br>&<br> Otto von Guericke University Magdeburg
   </div>
