--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title:
   
 <div class="row">
   <div class="column">
-     <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:320px;" title="LI Shasha"; algin="middle">
+     <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:auto;" title="LI Shasha"; algin="middle">
   </div>
   <div class="column"><br>
    <strong><font size="+2">Shasha Li</font> </strong> <br> 
