--- a/index.html
+++ b/index.html
@@ -11,28 +11,19 @@ title:
 
   gtag('config', 'G-J57QMWVXMZ');
 </script>
-
   
-<div class="row">
-  <div class="column">
-     <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:auto;" title="LI Shasha"; algin="middle">
-  </div>
-  <div class="column"><br>
-   <strong><font size="+2">Shasha Li</font> </strong> <br> 
-    <strong><font size="+2">厉莎莎</font> </strong>
-     <br><br>W1 Junior Professor<br><br>
-    Halle Institute for Economic Research (IWH) <br>&<br> Otto von Guericke University Magdeburg
-  </div>
-</div>
-     
+<img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:auto;" title="LI Shasha"; algin="middle">
+ <br><br>
+  
+ <strong><font size="+2">Shasha Li</font> </strong> <br> 
+ <strong><font size="+2">厉莎莎</font> </strong><br><br>
+ W1 Junior Professor<br><br>
+ Halle Institute for Economic Research (IWH) <br>&<br> Otto von Guericke University Magdeburg
 
-        <br>
-Hi, I am Shasha Li! People also call me Lisa. I obtained a Ph.D. degree in Economics and Finance from Bocconi University in Jan 2021.
+<br><br>
+ Research Interest: Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
 
-<br>   <br>
-My research interests lie in Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
-
-<br>   <br> 
+<br><br> 
 </div>
 
 
