--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title:  
+title:  Shasha Li 厉莎莎
 ---
 <div class="home">
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-J57QMWVXMZ"></script>
@@ -15,13 +15,16 @@ title:
 <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:auto;" title="LI Shasha"; algin="middle">
  <br><br>
   
- <strong><font size="+2">Shasha Li</font> </strong> <br> 
- <strong><font size="+2">厉莎莎</font> </strong><br><br>
- W1 Junior Professor<br><br>
+  <p style="text-align:center;">W1 Junior Professor
+  <br><br>
  Halle Institute for Economic Research (IWH) <br>&<br> Otto von Guericke University Magdeburg
-
-<br><br>
+  <br><br>
  Research Interest: Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
+  </p>
+  
+
+
+
 
 <br><br> 
 </div>
