--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title:  Shasha Li 厉莎莎
   
   <p style="text-align:center;">W1 Junior Professor
   <br><br>
- Halle Institute for Economic Research (IWH) <br>&<br> Otto von Guericke University Magdeburg
+ Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg
   <br><br>
  Research Interest: Corporate Finance, Fintech and Credit Market, in general Financial Economics. 
   </p>
