--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title:  Shasha Li 厉莎莎
 <img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:auto;" title="LI Shasha"; algin="middle">
  <br><br>
   
-  <p style="text-align:center;">W1 Junior Professor
+  <p style="text-align:left;">W1 Junior Professor
   <br><br>
  Halle Institute for Economic Research (IWH) and Otto von Guericke University Magdeburg
   <br><br>
