--- a/teachings.html
+++ b/teachings.html
@@ -5,14 +5,15 @@ permalink: /teachings/
 ---
 
 <strong><a>Bocconi University (TA/Tutor)</a></strong> <br><br>
-<p style="text-align:justify"><i>PhD: </i> Corporate Finance (Finance 4);</p>
+<p style="text-align:justify"><i>PhD: </i> Corporate Finance (Instructors: Stefano Rossi and Thorsten Martin);</p>
 <p style="text-align:justify"><i>Master: </i> Finance for Green Business and the Circular
-Economy, Econometrics;</p>
-<p style="text-align:justify"><i>Undergraduate: </i> Principles of Finance, International Banking, Venture and Development Capital,
-Macroeconomics, International and Monetary Economics.</p>
+Economy (Instructor: Claudio Zara), Econometrics (Instructor: Massimiliano Marcellino);</p>
+<p style="text-align:justify"><i>Undergraduate: </i> Principles of Finance (Instructor: Stefano Rossi), International Banking (Instructor: Elena Caletti), 
+  Venture and Development Capital (Instructor: Claudio Zara),
+Macroeconomics (Instructors: Tommy Murphy, Patrice De Micco and Basile Grassi), International and Monetary Economics (Instructor: Dmitriy Sergeyev).</p>
 <br>
 
 <strong><a>Peking University (TA)</a></strong> <br><br>
-<p style="text-align:justify"><i>Master: </i>Numerical Methods and Analysis, Applied Stochastic Processes.</p>
+<p style="text-align:justify"><i>Master: </i>Numerical Methods and Analysis (Instructor: Kwangwon Ahn), Applied Stochastic Processes (Instructor: Kwangwon Ahn).</p>
 
 <br>
