--- a/teachings.html
+++ b/teachings.html
@@ -10,7 +10,7 @@ permalink: /teachings/
 Economy (Instructor: Claudio Zara), Econometrics (Instructor: Massimiliano Marcellino);</p>
 <p style="text-align:justify"><i>Undergraduate: </i> Principles of Finance (Instructor: Stefano Rossi), International Banking (Instructor: Elena Caletti), 
   Venture and Development Capital (Instructor: Claudio Zara),
-Macroeconomics (Instructors: Tommy Murphy, Patrice De Micco and Basile Grassi), International and Monetary Economics (Instructor: Dmitriy Sergeyev).</p>
+Macroeconomics (Instructors: Basile Grassi, Patrice De Micco and Tommy Murphy), International and Monetary Economics (Instructor: Dmitriy Sergeyev).</p>
 <br>
 
 <strong><a>Peking University (TA)</a></strong> <br><br>
