--- a/teachings.html
+++ b/teachings.html
@@ -5,15 +5,15 @@ permalink: /teachings/
 ---
 
 <strong><a>Bocconi University (TA/Tutor)</a></strong> <br><br>
-<p style="text-align:justify"><i>PhD: </i> Corporate Finance (Instructors: Stefano Rossi and Thorsten Martin);</p>
-<p style="text-align:justify"><i>Master: </i> Finance for Green Business and the Circular
-Economy (Instructor: Claudio Zara), Econometrics (Instructor: Massimiliano Marcellino);</p>
-<p style="text-align:justify"><i>Undergraduate: </i> Principles of Finance (Instructor: Stefano Rossi), International Banking (Instructor: Elena Caletti), 
-  Venture and Development Capital (Instructor: Claudio Zara),
-Macroeconomics (Instructors: Basile Grassi, Patrice De Micco and Tommy Murphy), International and Monetary Economics (Instructor: Dmitriy Sergeyev).</p>
+<p style="text-align:justify"><i>PhD: </i> <br>Corporate Finance (Instructors: Stefano Rossi and Thorsten Martin);</p>
+<p style="text-align:justify"><i>Master: </i> <br>Finance for Green Business and the Circular
+Economy (Instructor: Claudio Zara); <br>Econometrics (Instructor: Massimiliano Marcellino);</p>
+<p style="text-align:justify"><i>Undergraduate: </i> <br>Principles of Finance (Instructor: Stefano Rossi); <br>International Banking (Instructor: Elena Caletti), 
+  Venture and Development Capital (Instructor: Claudio Zara);
+<br>Macroeconomics (Instructors: Basile Grassi, Patrice De Micco and Tommy Murphy); <br>International and Monetary Economics (Instructor: Dmitriy Sergeyev).</p>
 <br>
 
 <strong><a>Peking University (TA)</a></strong> <br><br>
-<p style="text-align:justify"><i>Master: </i>Numerical Methods and Analysis (Instructor: Kwangwon Ahn), Applied Stochastic Processes (Instructor: Kwangwon Ahn).</p>
+<p style="text-align:justify"><i>Master: </i><br>Numerical Methods and Analysis (Instructor: Kwangwon Ahn); <br>Applied Stochastic Processes (Instructor: Kwangwon Ahn).</p>
 
 <br>
