--- a/teachings.html
+++ b/teachings.html
@@ -8,7 +8,7 @@ permalink: /teachings/
 <p style="text-align:justify"><i>PhD: </i> <br>Corporate Finance (Instructors: Stefano Rossi and Thorsten Martin);</p>
 <p style="text-align:justify"><i>Master: </i> <br>Finance for Green Business and the Circular
 Economy (Instructor: Claudio Zara); <br>Econometrics (Instructor: Massimiliano Marcellino);</p>
-<p style="text-align:justify"><i>Undergraduate: </i> <br>Principles of Finance (Instructor: Stefano Rossi); <br>International Banking (Instructor: Elena Caletti); 
+<p style="text-align:justify"><i>Undergraduate: </i> <br>Principles of Finance (Instructor: Stefano Rossi); <br>International Banking (Instructor: Elena Carletti); 
   <br>Venture and Development Capital (Instructor: Claudio Zara);
 <br>Macroeconomics (Instructors: Basile Grassi, Patrice De Micco and Tommy Murphy); <br>International and Monetary Economics (Instructor: Dmitriy Sergeyev).</p>
 <br>
