--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title:  Shasha Li 厉莎莎
   gtag('config', 'G-J57QMWVXMZ');
 </script>
   
-<img src="content/profile2.jpg" alt="LI Shasha pic" style="width:240px;height:auto;" title="LI Shasha"; algin="middle">
+<img src="content/Lisa.jpg" alt="LI Shasha pic" style="width:480px;height:auto;" title="LI Shasha"; algin="middle">
  <br><br>
   
   <p style="text-align:left;">W1 Junior Professor
