--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@ permalink: /research/
 
 <strong><big><a>Working Papers</a></big></strong> <br><br>
 
-<strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong> (JMP)<br>
+<strong><a href="https://shasha-li.github.io/content/JMP-Li.pdf">Lighthouse in the Dark: Search in Marketplace Lending</a></strong><br>
 <em><small>Presentation: 2020 China Finance Doctoral Forum; Bocconi Finance Brown Bag Seminar; LBS PhD Seminar; Econometric Society Winter Meeting 2019; Bocconi La Strada Seminar; the Royal Economic Society's 2020 Annual Conference  (cancelled due to Covid-19) </small></em>
 <p style="text-align:justify"><b><i>Abstract: </i>
   </b>This paper sheds light on the search friction in the Fintech credit market and examines the impact of public information service on marketplace 
@@ -19,7 +19,7 @@ permalink: /research/
   </p><br>
 
 <strong><a href="https://shasha-li.github.io/content/Cost%20of%20default%20in%20CIA%20economy.pdf">The Cost of Default in a Cash-In-Advance Economy</a></strong>
-<br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a>;<br>
+<br>with <a href="https://yonsei.pure.elsevier.com/en/persons/kwangwon-ahn">Kwangwon Ahn</a>, and <a href="https://sites.google.com/view/daeyonglee/">Daeyong Lee</a><br>
 <p style="text-align:justify"><b><i>Abstract: </i></b>This study shows that corporate default is not trivial to the real economy. Under a Cash-
 In-Advance (CIA) framework, we examine the welfare cost of default and how the
 injection of cash affects welfare cost of default. Incorporating non-linear form of nonpecuniary
@@ -29,3 +29,9 @@ economy with higher money growth rate only in the long-run but not in the short-
 
 <br><br><br>
 
+<strong><big><a>Work in Progress</a></big></strong> <br><br>
+<strong><a>Green Attention, Capital Structure, and Market Integration</a></strong> 
+<br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
+
+<strong><a>Data Manipulation in Marketplace Lending</a></strong>
+<br>with <a>Yutong Hu</a><br>
