--- a/research.html
+++ b/research.html
@@ -27,9 +27,9 @@ default penalty into a CIA model, we find that default causes around 1% loss
 in consumption. The negative effects of default on welfare is significantly greater in an
 economy with higher money growth rate only in the long-run but not in the short-run.</p><br>
 
-<br><br> 
+<br> 
 
-<strong><big><a>Work in Progress</a></big></strong> <br><br>
+<strong><big><a>Work in Progress</a></big></strong> <br> 
 <strong><a>Green Attention, Capital Structure, and Market Integration</a></strong> 
 <br>with <a href="https://app.scholarsite.io/biao-yang">Biao Yang</a><br>
 
